add clojure camp to getting start

--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -52,6 +52,7 @@ If you'd like to try some practice problems:
 
 Also check out:
 
+* https://clojure.camp/[Clojure Camp] - an interactive community for beginner Clojure developers
 * <<xref/../../community/resources#_tutorials_and_learning_materials,Other learning resources>> for more options...
 
 == Where can I ask questions?
