--- a/content/guides/editors.adoc
+++ b/content/guides/editors.adoc
@@ -28,7 +28,7 @@ Some places to start:
 * https://www.gnu.org/software/emacs/download.html[GNU Emacs - download and install] - the official GNU Emacs page
 * https://practical.li/spacemacs/install-spacemacs/[Practicalli guide to Spacemacs], a community driven Emacs configuration for Clojure - includes clojure-mode and CIDER
 * https://prelude.emacsredux.com/en/latest/[Prelude] - an Emacs configuration for Emacs beginners, not specific to Clojure, but includes Clojure support (clojure-mode, CIDER)
-* https://aquamacs.org/[Aquamacs] - Aquamacs is Emacs designed for the Mac native user in mind and is sufficient for a minimalist Clojure environment when paired with inf-clojure mode (also see https://github.com/cognitect-labs/aquamacs-support[aquamacs-support])
+* https://aquamacs.org/[Aquamacs] - Aquamacs is Emacs designed for the Mac native user in mind and is sufficient for a minimalist Clojure environment when paired with inf-clojure mode (recommended: https://github.com/cognitect-labs/aquamacs-support[aquamacs-support])
 
 == IntelliJ - Clojure with a Java tilt
 
