Remove dead links from user_groups closes #697

--- a/content/community/user_groups.adoc
+++ b/content/community/user_groups.adoc
@@ -25,9 +25,8 @@ https://github.com/clojure/clojure-site[clojure-site] github repo.
 [[canada]]
 * Canada
 ** https://groups.google.com/forum/#!forum/montreal-clojure-user-group[Montreal Clojure User
-Group]
+Group] (Inactive since 2017)
 ** https://clojureto.github.io[Clojure Toronto]
-** https://www.meetup.com/Vancouver-Clojure[Vancouver Clojure]
 [[unitedstates]]
 * United states
 ** Northeast
@@ -38,43 +37,36 @@ Clojure fans generally form a plurality.
 *** https://www.meetup.com/Clojure-NYC/[NYC Clojure Users Group] (Twitter: https://twitter.com/ClojureNYC[@ClojureNYC])
 *** ClojureScript NYC (Twitter: https://twitter.com/ClojureNYC[@ClojureNYC])
 *** https://www.meetup.com/Clojadelphia/[Clojadelphia - The Philadelphia User
-Group]
+Group] (Inactive since 2022)
 *** Pittsburgh Clojure Users Group is part of http://www.codeandsupply.co/[Pittsburgh Code & Supply]
 ** Midwest
 *** https://www.meetup.com/Chicago-Clojure/[Chicago]
-*** https://cincyfp.wordpress.com/[Cincy Functional Programmers Group]
+*** https://cincyfp.wordpress.com/[Cincy Functional Programmers Group] (Inactive since 2018)
 *** Detroit Clojure Group
-*** https://www.meetup.com/clojure-mke/[Clojure MKE - Milwaukee, WI]
 *** https://www.meetup.com/Madison-Clojure-Meetup/[Madison Clojure Meetup] - Madison, WI
-*** http://clojure.mn/[Minnesota Clojure Users Group]
-*** https://www.meetup.com/stl-clojure[St. Louis Clojure Meetup]
-*** http://www.columbusclojure.com[Columbus Clojure User Group]
 ** South
-*** https://www.meetup.com/Baltimore-Clojure/[Baltimore Clojure Meetup]
-*** https://www.meetup.com/Cap-Clug/[National Capital Area Clojure Users
+*** https://www.meetup.com/Cap-Clug/[National Capital Area Clojure Users (Inactive since 2021)
 Group] - Reston, VA
 *** ClojureDC - Washington, DC
-*** https://meetup.com/TriClojure/[TriClojure Meetup]
-*** https://www.meetup.com/Atl-Clj/[Atlanta Clojure User Group]
-*** https://groups.google.com/group/clj-houston[Clojure Houston User Group]
+*** https://meetup.com/TriClojure/[TriClojure Meetup] (Inactive since 2022)
+*** https://www.meetup.com/Atl-Clj/[Atlanta Clojure User Group] (Inactive since 2021)
+*** https://groups.google.com/group/clj-houston[Clojure Houston User Group] (Inactive since 2014)
 *** Dallas/Fort Worth Clojure Interest Group (https://groups.google.com/forum/#topic/clojure/Cym7oiViFoQ[
 See mailing list thread for more info])
-*** https://www.meetup.com/Clojure-Mid-Cities/[DFW-Southlake Clojure Mid-Cities Meetup]
+*** https://www.meetup.com/Clojure-Mid-Cities/[DFW-Southlake Clojure Mid-Cities Meetup] (Inactive since 2021)
 *** https://www.meetup.com/Austin-Clojure-Meetup/[Austin Clojure Meetup]
 *** Greenville Clojure Users Group (and https://groups.google.com/forum/#!forum/greenville-clojure[mailing list])
-*** https://www.meetup.com/Clojure-Co-Lab/[Clojure Co-Lab] - Columbia, South
 Carolina
 ** West
 *** http://seajure.github.io[Seajure - Seattle Clojure Group]
-*** https://www.meetup.com/clojerks/[Clojure user group in Portland]
+*** https://www.meetup.com/clojerks/[Clojure user group in Portland] (Inactive since 2020)
 *** https://www.meetup.com/The-Bay-Area-Clojure-User-Group/[Bay Area Clojure User
 Group] - San Francisco (monthly meetup plus monthly
-dojo); San Mateo (monthly meetup)
+dojo); San Mateo (monthly meetup) (Inactive since 2022)
 *** https://www.meetup.com/Denver-Clojure-Meetup/[Denver Clojure Meetup]
 *** https://www.meetup.com/Los-Angeles-Clojure-Users-Group/[Los Angeles Clojure Users Group] and https://groups.google.com/forum/#!forum/clj-la[mailing list]
 *** Santa Barbara Clojure Users Group
-*** https://groups.google.com/forum/#!forum/clj-phx[Phoenix Clojure User Group]
-*** https://www.meetup.com/San-Diego-Clojure-Users-Group/[San Diego Clojure Users Group]
+*** https://groups.google.com/forum/#!forum/clj-phx[Phoenix Clojure User Group] (Inactive since 2018)
 
 [[europe]]
 == Europe
