--- a/content/releases/devchangelog.adoc
+++ b/content/releases/devchangelog.adoc
@@ -19,6 +19,11 @@ Note: All dev releases are subject to breaking changes for new work since the pr
 
 == Release 1.12.0
 
+=== 1.12.0-rc1 (Aug 3, 2024) [[v1.12.0-rc1]]
+
+* https://clojure.atlassian.net/browse/CLJ-2145[CLJ-2145] Fix clearing of closed overs in ^:once fns
+* https://clojure.atlassian.net/browse/CLJ-2865[CLJ-2317] `recur` to head of :once fn cancels once
+
 === 1.12.0-beta2 (Jul 29, 2024) [[v1.12.0-beta2]]
 
 * https://clojure.atlassian.net/browse/CLJ-2867[CLJ-2867] Convey type hints on metadata values
