--- a/content/news/2024/08/03/deref.adoc
+++ b/content/news/2024/08/03/deref.adoc
@@ -35,7 +35,7 @@ At this point we consider 1.12.0 to be complete pending feedback from the commun
 * https://2024.clojure-conj.org/#/speakers[Speakers] - CLOJURE/CONJ
 * https://blog.hughpowell.net/6-months-1-line-of-code.html[6 months, 1 line of code] - Hugh Powell
 * https://play.teod.eu/clojure-easy-parallellism-with-pipeline-blocking/[Easy, explicit parallellism with pipeline-blocking] - Ruben S. Sevaldson, Teodor Heggelund
-* https://danielsz.github.io/20240718T060528--lisps-grandfather-paradox__clojure_lisp_scheme.html[LISP'S GRANDFATHER PARADOX] - Daniel Szmulewicz
+* link:++https://danielsz.github.io/20240718T060528--lisps-grandfather-paradox__clojure_lisp_scheme.html++[LISP'S GRANDFATHER PARADOX] - Daniel Szmulewicz
 * https://hyperfiddle-docs.notion.site/Electric-progress-update-July-2024-9429836036e4489fb9ce3dc9ddf7faee[Electric Clojure progress update - July 2024] - Dustin Getz
 * https://tonitalksdev.com/typed-configuration-files-with-malli-aero[Typed Configuration Files with Malli & Aero] - Toni Väisänen
 
