--- a/content/news/2024/08/03/deref.adoc
+++ b/content/news/2024/08/03/deref.adoc
@@ -23,7 +23,7 @@ At this point we consider 1.12.0 to be complete pending feedback from the commun
 
 == Podcasts and videos
 
-* https://podcasters.spotify.com/pod/show/lostinlambduhhs/episodes/first-conj-clojure-camp-raf-dittwald-recia-roopnarine-e2mjtmd/a-abf646a[((first (conj [:clojure-camp] :raf-dittwald :recia-roopnarine))] - Jordan Miller
+* https://podcasters.spotify.com/pod/show/lostinlambduhhs/episodes/first-conj-clojure-camp-raf-dittwald-recia-roopnarine-e2mjtmd/a-abf646a[pass:[((first (conj [:clojure-camp] :raf-dittwald :recia-roopnarine))]] - Jordan Miller
 * https://www.youtube.com/watch?v=N0pxjHgNUxs[Packaging Clojure app for Mac] - Clojure Diary
 * https://www.youtube.com/watch?v=N_E-P2Giq1k[Meetup: Collaborative Learning - XTDB 2.0] - Los Angeles Clojure Users Group
 * https://www.youtube.com/watch?v=bJCDJnt4lEA[Meetup: Collaborative Learning - XTDB 2.0 (part 2)] - Los Angeles Clojure Users Group
