--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,10 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.11.1/CHANGELOG.md[repo changelog].
 
+=== 1.11.4.1474 (Aug 5, 2024) [[v1.11.4.1474]]
+
+* Use Clojure 1.11.4 as default Clojure version
+
 === 1.11.3.1463 (May 1, 2024) [[v1.11.3.1463]]
 
 * `-X:deps aliases` - make resilient for non-map alias data
